--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,2 +1,2 @@
 VITE_API_URL=http://localhost:3001
-VITE_GOOGLE_CLIENT_ID="377709171063-hfds1ttk8fr9vlfgd3orrf0gf4ua8t4v.apps.googleusercontent.com"
+VITE_GOOGLE_CLIENT_ID="3iuusvisibuv"
