--- a/chat-backend/package.json
+++ b/chat-backend/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/index.js",
+    "vercel-build": "prisma generate && tsc",
     "db:push": "prisma db push",
     "db:generate": "prisma generate"
   },
